# DepthFlow

./: .gitignore  404.html  CNAME  Custom.py  License-com.txt  Readme.md  docs.py  index.html  mkdocs.yml  objects.inv  poetry.toml  pyproject.toml  readme.md  sitemap.xml  zensical.toml
.github/: Funding.yml  code_of_conduct.md  contributing.md  funding.yml  hatch_build.py  pull_request_template.md  security.md
.github/ISSUE_TEMPLATE/: 1-bug.yml  2-feature.yml  3-question.yml  Anomaly.md  Feature.md  config.yml
.github/workflows/: deploy-website.yml  make-pypi.yml  make-website.yml  release.yml  website.yml
DepthFlow/: Animation.py  Custom.py  CustomScene.py  DepthFlow.py  DepthFlowMDE.py  DepthFlowScene.py  DepthScene.py  Motion.py  Scene.py  Server.py  State.py  Webui.py  __init__.py  __main__.py
DepthFlow/Modules/: DepthFlowMDE.py  Monocular.py  __init__.py
Docs/: index.md
Docs/get/: index.md
Examples/: Base.py  Basic.py  Batch.ps1  Batch.py  Complex.py  Custom.py  Parallel.py  Screenshot.py  SideBySide.py
Website/: commands.md  docs.py  get.md  make.py  paper.md  scripts.md  webui.md
Website/docs/: commands.md  index.md  paper.md  parameters.md  webui.md
Website/easy/: examples.md  install.md
Website/get/: index.md  installers.md
Website/learn/: foundations.md  parameters.md
Website/quick/: cli.md  examples.md  index.md  install.md  scripts.md  webui.md
Website/quickstart/: index.md
about/changelog/: index.html
about/contact/: index.html
about/roadmap/: index.html
css/: extra.css
depthflow/: __init__.py  __main__.py  animation.py  motion.py  scene.py  segments.py  state.py  webui.py
depthflow/estimators/: __init__.py  anything.py  depthpro.py  marigold.py  zoedepth.py
depthflow/resources/: depthflow.glsl
docs/: index.html
docs/commands/: index.html
docs/parameters/: index.html
docs/scripts/: index.html
docs/webui/: index.html
examples/: basic.py  batch.ps1  batch.py  complex.py  custom.py  docs.py  postfx.py  presets.py  readme.md  screenshot.py  side_by_side.py  stereoscopic.py  vr.py
examples/readme/: index.html
get/: index.html
get/installers/: index.html
javascript/: mathjax.js  particles.js  video.js
search/: search_index.json
website/: changelog.md  community.md  docs.py  license.md  make.py
(+36 files in other folders)
